# office-ocr-rpa-template

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
data/: names.csv
modules/: __init__.py  clicker.py  config.py  data_loader.py  logger.py  matcher.py  models.py  ocr.py  safety.py  screenshot.py  ui.py  workflow.py
tasks/: batch_names.yaml
tests/: test_data_loader.py  test_matcher.py  test_ocr.py  test_screenshot.py  test_workflow.py
